--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "@angular/platform-browser": "^8.2.12",
     "@angular/platform-browser-dynamic": "^8.2.12",
     "@angular/router": "^8.2.12",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "@types/chart.js": "^2.8.9",
+    "angular-bootstrap-md": "^8.4.0",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
