--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^8.2.12",
     "@angular/compiler": "^8.2.12",
     "@angular/core": "^8.2.12",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "^8.2.12",
     "@angular/platform-browser": "^8.2.12",
     "@angular/platform-browser-dynamic": "^8.2.12",
@@ -26,6 +27,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
+    "firebase": "^7.2.2",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
