--- a/firebase.json
+++ b/firebase.json
@@ -5,8 +5,9 @@
     ],
     "source": "functions"
   },
-  "hosting": {
-    "public": "dist/",
+  "hosting": [{
+    "target": "invite-app",
+    "public": "dist/invite-app/",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -18,7 +19,22 @@
         "destination": "/index.html"
       }
     ]
-  },
+  }, 
+  {
+    "target": "admin-app",
+    "public": "dist/admin-app/",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }],
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
