--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/core": "^8.2.12",
-    "@angular/fire": "^5.2.1",
-    "@angular/forms": "^8.2.12",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/router": "^8.2.12",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/fire": "^5.2.3",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
-    "@types/chart.js": "^2.8.9",
-    "angular-bootstrap-md": "^8.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@types/chart.js": "^2.9.0",
+    "angular-bootstrap-md": "^8.6.0",
+    "angular-date-value-accessor": "0.0.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
-    "chart.js": "^2.5.0",
-    "firebase": "^7.2.2",
+    "chart.js": "^2.9.3",
+    "firebase": "^7.4.0",
+    "firebase-admin": "^8.8.0",
+    "firebase-functions": "^3.3.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
@@ -35,10 +38,10 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.14",
-    "@angular/cli": "^8.3.14",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
+    "@angular-devkit/build-angular": "^0.803.19",
+    "@angular/cli": "^8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
