Added text and photos for the invitation page. Added photos to the Location page. Yet to add text to the location page.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ Thumbs.db
 #environments
 src/environments/
 favicon.bak
+src/assets/images/04BD09F0-0C3C-41FE-AC2B-2D3F7A3417B2.JPG
+src/assets/images/IMG_0487.JPG
