--- a/.firebaserc
+++ b/.firebaserc
@@ -13,6 +13,16 @@
           "kxe-wedding-admin"
         ]
       }
+    },
+    "kxe-wedding-prod": {
+      "hosting": {
+        "invite-app": [
+          "KxE-Wedding"
+        ],
+        "admin-app": [
+          "wedding-admin"
+        ]
+      }
     }
   }
 }
