Configured the project to deploy to both the model and production, the production deployment has some errors with the font though.

--- a/.firebaserc
+++ b/.firebaserc
@@ -13,6 +13,16 @@
           "kxe-wedding-admin"
         ]
       }
+    },
+    "kxe-wedding-prod": {
+      "hosting": {
+        "invite-app": [
+          "kxe-wedding-prod"
+        ],
+        "admin-app": [
+          "kxe-wedding-admin-6b487"
+        ]
+      }
     }
   }
 }
