--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "@types/chart.js": "^2.9.7",
+    "@types/chart.js": "^2.9.8",
     "angular-bootstrap-md": "^8.8.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
@@ -39,9 +39,9 @@
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^13.1.4",
     "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,7 +49,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
