Initial Development Build of Angular9 successful

--- a/angular.json
+++ b/angular.json
@@ -137,5 +137,8 @@
       }
     }
   },
-  "defaultProject": "kevinxerandhi"
+  "defaultProject": "kevinxerandhi",
+  "cli": {
+    "analytics": "775f6978-3f6f-40c5-9612-01d6e5e3f0cb"
+  }
 }
