--- a/package.json
+++ b/package.json
@@ -11,37 +11,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.1",
-    "@angular/common": "^9.0.1",
-    "@angular/compiler": "^9.0.1",
-    "@angular/core": "^9.0.1",
+    "@angular/animations": "^9.0.7",
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
     "@angular/fire": "^5.4.2",
-    "@angular/forms": "^9.0.1",
-    "@angular/platform-browser": "^9.0.1",
-    "@angular/platform-browser-dynamic": "^9.0.1",
-    "@angular/router": "^9.0.1",
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@ng-bootstrap/ng-bootstrap": "^5.2.3",
-    "@types/chart.js": "^2.9.14",
-    "angular-bootstrap-md": "^8.9.0",
+    "@angular/forms": "^9.0.7",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
+    "@angular/router": "^9.0.7",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
+    "@types/chart.js": "^2.9.16",
+    "angular-bootstrap-md": "^8.10.1",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "firebase": "^7.8.1",
+    "firebase": "^7.12.0",
     "hammerjs": "^2.0.8",
-    "ngx-bootstrap": "^5.3.2",
+    "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "tslib": "^1.11.1",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.2",
-    "@angular/cli": "^9.0.2",
-    "@angular/compiler-cli": "^9.0.1",
-    "@angular/language-service": "^9.0.1",
-    "@types/jasmine": "^3.5.3",
+    "@angular-devkit/build-angular": "^0.900.7",
+    "@angular/cli": "^9.0.7",
+    "@angular/compiler-cli": "^9.0.7",
+    "@angular/language-service": "^9.0.7",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.31",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -49,7 +49,7 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
