--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -55,7 +55,6 @@
               "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -138,5 +137,8 @@
       }
     }
   },
-  "defaultProject": "kevinxerandhi"
+  "defaultProject": "kevinxerandhi",
+  "cli": {
+    "analytics": "e32418cd-b4ad-4e98-aef0-14cf66878944"
+  }
 }
