--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
@@ -23,7 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@types/chart.js": "^2.9.16",
-    "angular-bootstrap-md": "^8.10.1",
+    "angular-bootstrap-md": "^9.0.0",
     "angular-date-value-accessor": "0.0.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
