--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@types/chart.js": "^2.9.16",
     "angular-bootstrap-md": "^9.0.0",
-    "angular-date-value-accessor": "0.0.2",
+    "angular-date-value-accessor": "1.0.0-rc.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
