--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
     "@types/chart.js": "^2.9.16",
     "angular-bootstrap-md": "^9.0.0",
-    "angular-date-value-accessor": "1.0.0-rc.2",
+    "angular-date-value-accessor": "^1.0.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
@@ -56,7 +55,7 @@
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
+    "tslint": "^5.0.0",
     "typescript": "~3.8.3"
   }
 }
