--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
-    "@angular/fire": "^6.0.0-rc.1",
+    "@angular/fire": "^6.0.0-rc.2",
     "@angular/forms": "^9.1.0",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@types/chart.js": "^2.9.16",
-    "angular-bootstrap-md": "^9.0.0",
+    "@types/chart.js": "^2.9.18",
+    "angular-bootstrap-md": "^9.0.1",
     "angular-date-value-accessor": "^1.0.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "firebase": "^7.12.0",
+    "firebase": "^7.13.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.5.0",
+    "firebase-functions": "^3.6.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^5.5.0",
     "rxjs": "~6.5.4",
@@ -38,14 +38,19 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
     "@angular-devkit/build-angular": "~0.901.0",
     "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.34",
     "codelyzer": "^5.2.1",
+    "firebase-tools": "^7.16.2",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -55,12 +60,7 @@
     "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
-    "tslint": "^5.0.0",
-    "typescript": "~3.8.3",
-    "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
-    "firebase-tools": "^7.12.1",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1"
+    "tslint": "^6.0.0",
+    "typescript": "~3.8.3"
   }
 }
