--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/fire": "^6.0.0-rc.2",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
+    "@angular/common": "^9.1.6",
+    "@angular/compiler": "^9.1.6",
+    "@angular/core": "^9.1.6",
+    "@angular/fire": "^6.0.0",
+    "@angular/forms": "^9.1.6",
+    "@angular/platform-browser": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/router": "^9.1.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@types/chart.js": "^2.9.18",
-    "angular-bootstrap-md": "^9.0.1",
+    "@types/chart.js": "^2.9.20",
+    "angular-bootstrap-md": "^9.3.0",
     "angular-date-value-accessor": "^1.0.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "firebase": "^7.13.1",
-    "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.0",
+    "firebase": "^7.14.3",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.1",
     "hammerjs": "^2.0.8",
-    "ngx-bootstrap": "^5.5.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.1",
+    "ngx-bootstrap": "^5.6.1",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.11.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
-    "@angular-devkit/build-angular": "~0.901.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
+    "@angular-devkit/build-angular": "^0.901.5",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler-cli": "^9.1.6",
+    "@angular/language-service": "^9.1.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.34",
+    "@types/node": "^12.12.38",
     "codelyzer": "^5.2.1",
     "firebase-tools": "^7.16.2",
     "fuzzy": "^0.1.3",
@@ -58,9 +58,9 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.2",
     "typescript": "~3.8.3"
   }
 }
