--- a/package.json
+++ b/package.json
@@ -11,50 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/fire": "^6.0.0-rc.1",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
+    "@angular/common": "^9.1.6",
+    "@angular/compiler": "^9.1.6",
+    "@angular/core": "^9.1.6",
+    "@angular/fire": "^6.0.0",
+    "@angular/forms": "^9.1.6",
+    "@angular/platform-browser": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/router": "^9.1.6",
     "@fortawesome/fontawesome-free": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.3.0",
-    "@types/chart.js": "^2.9.16",
-    "angular-bootstrap-md": "^9.0.0",
+    "@types/chart.js": "^2.9.20",
+    "angular-bootstrap-md": "^9.3.0",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.3",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.11.1",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.11.2",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
-    "@angular-devkit/build-angular": "^0.901.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
+    "@angular-devkit/build-angular": "^0.901.5",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler-cli": "^9.1.6",
+    "@angular/language-service": "^9.1.6",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^13.9.5",
+    "@types/node": "^13.13.5",
     "codelyzer": "^5.2.2",
-    "firebase-tools": "^7.12.1",
+    "firebase-tools": "^7.16.2",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
