--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ src/environments/
 favicon.bak
 src/assets/images/04BD09F0-0C3C-41FE-AC2B-2D3F7A3417B2.JPG
 src/assets/images/IMG_0487.JPG
+
+.firebase/*
